--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -542,7 +542,34 @@
        " 'Margaritaria discoidea',\n",
        " 'Markhamia tomentosa',\n",
        " 'Maytenus senegalensis',\n",
-       " 'Mimosa pigra']"
+       " 'Mimosa pigra',\n",
+       " 'Mitragyna inermis',\n",
+       " 'Monotes kerstingii',\n",
+       " 'Morelia senegalensis',\n",
+       " 'Moringa oleifera',\n",
+       " 'Neocarya macrophylla',\n",
+       " 'Newbouldia laevis',\n",
+       " 'Ochna rhizomatosa',\n",
+       " 'Ochna schweinfurthiana',\n",
+       " 'Olax subscorpioidea',\n",
+       " 'Oncoba spinosa',\n",
+       " 'Opilia celtidifolia',\n",
+       " 'Ormocarpum bibracteatum',\n",
+       " 'Oxytenanthera abyssinica',\n",
+       " 'Ozoroa insignis',\n",
+       " 'Pachystela pobeguiniana',\n",
+       " 'Parinari curatellifolia',\n",
+       " 'Parkia biglobosa',\n",
+       " 'Parkinsonia aculeata',\n",
+       " 'Paullinia pinnata',\n",
+       " 'Pavetta cinereifolia',\n",
+       " 'Pavetta corymbosa',\n",
+       " 'Pavetta crassipes',\n",
+       " 'Pericopsis laxiflora',\n",
+       " 'Phoenix dactylifera',\n",
+       " 'Phoenix reclinata',\n",
+       " 'Phyllanthus muellerianus',\n",
+       " 'Phyllanthus reticulatus']"
       ]
      },
      "execution_count": 6,
@@ -811,19 +838,46 @@
       "Margaritaria discoidea done\n",
       "Markhamia tomentosa done\n",
       "Maytenus senegalensis done\n",
-      "Mimosa pigra done\n"
+      "Mimosa pigra done\n",
+      "Mitragyna inermis done\n",
+      "Monotes kerstingii done\n",
+      "Morelia senegalensis done\n",
+      "Moringa oleifera done\n",
+      "Neocarya macrophylla done\n",
+      "Newbouldia laevis done\n",
+      "Ochna rhizomatosa done\n",
+      "Ochna schweinfurthiana done\n",
+      "Olax subscorpioidea done\n",
+      "Oncoba spinosa done\n",
+      "Opilia celtidifolia done\n",
+      "Ormocarpum bibracteatum done\n",
+      "Oxytenanthera abyssinica done\n",
+      "Ozoroa insignis done\n",
+      "Pachystela pobeguiniana done\n",
+      "Parinari curatellifolia done\n",
+      "Parkia biglobosa done\n",
+      "Parkinsonia aculeata done\n",
+      "Paullinia pinnata done\n",
+      "Pavetta cinereifolia done\n",
+      "Pavetta corymbosa done\n",
+      "Pavetta crassipes done\n",
+      "Pericopsis laxiflora done\n",
+      "Phoenix dactylifera done\n",
+      "Phoenix reclinata done\n",
+      "Phyllanthus muellerianus done\n",
+      "Phyllanthus reticulatus done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 74%|███████▍  | 267/361 [00:45<00:15,  5.90it/s] \n"
+      " 81%|████████▏ | 294/361 [00:46<00:10,  6.38it/s] \n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Phyllanthus+reticulatus+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Salix+subserrata+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -832,7 +886,7 @@
       "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Phyllanthus+reticulatus+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Salix+subserrata+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
